[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dfindexeddb"
version = "20260205"
requires-python = ">=3.9"
description = "dfindexeddb is an experimental Python tool for performing digital forensic analysis of IndexedDB and leveldb files."
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Syd Pleno", email = "sydp@google.com" }]
maintainers = [
  { name = "dfIndexeddb Developers", email = "dfindexeddb-dev@googlegroups.com" },
]
dependencies = ["python-snappy>=0.6.1", "zstd>=1.5.5.1"]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]

[project.optional-dependencies]
plugins = ["protobuf", "dfdatetime"]

[project.scripts]
dfindexeddb = "dfindexeddb.indexeddb.cli:App"
dfleveldb = "dfindexeddb.leveldb.cli:App"

[tool.setuptools]
packages = [
  "dfindexeddb",
  "dfindexeddb.indexeddb",
  "dfindexeddb.indexeddb.chromium",
  "dfindexeddb.indexeddb.firefox",
  "dfindexeddb.indexeddb.safari",
  "dfindexeddb.leveldb",
  "dfindexeddb.leveldb.plugins",
]

[project.urls]
Homepage = "https://github.com/google/dfindexeddb"
Documentation = "https://github.com/google/dfindexeddb/tree/main/docs"
Repository = "https://github.com/google/dfindexeddb"
"Bug Tracker" = "https://github.com/google/dfindexeddb/issues"

[tool.pyink]
line_length = 80
pyink_indentation = 2
include = '\.pyi?$'
force-exclude = '.*_pb2\.py'

[tool.mypy]
disable_error_code = ["override"]
ignore_missing_imports = true
strict = true
exclude = ['_pb2\.py', "tests"]
disallow_untyped_calls = false
